# CMakeUseDynamicLikLib

./: CMakeLists.txt  Readme.md
src/: main.cpp
